--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
+    "@ngrx/component-store": "^17.1.0",
+    "@ngrx/effects": "^17.1.0",
+    "@ngrx/router-store": "^17.1.0",
+    "@ngrx/signals": "^17.1.0",
+    "@ngrx/store": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "express": "^4.18.2",
+    "ng-zorro-antd": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
